@@ -24,6 +24,7 @@ my $builder = Test::Run::Builder->new(
         'Class::XSAccessor' => 0,
         'Exporter' => 0,
         'Games::ABC_Path::Solver::Base' => 0,
+        'Games::ABC_Path::Solver::Constants' => 0,
         'Games::ABC_Path::Solver::Board' => '0.1.0',
         'Getopt::Long' => '2.36',
         'integer' => 0,
