@@ -11,7 +11,7 @@ use integer;
 
 use base 'Games::ABC_Path::Solver::Base';
 
-use Games::ABC_Path::Generator::Constants;
+use Games::ABC_Path::Solver::Constants;
 
 =head1 NAME
 
